# tcp-chat

client/: .clang-format  CMakeLists.txt
client/src/: const.hpp  main.cpp  networkmessage.cpp  networkmessage.hpp
docs/: protocol-1.0.md  protocol-2.0.md
server/: .clang-format  CMakeLists.txt
server/src/: channel.cpp  channel.h  channel.hpp  channelmanager.cpp  channelmanager.h  channelmember.h  channelobserver.h  channelsubject.h  connection.cpp  connection.h  connection.hpp  connectionchat.cpp  connectionchat.h  connectionchatfactory.cpp  connectionchatfactory.h  connectionfactory.cpp  connectionfactory.h  const.hpp  main.cpp  networkmessage.cpp  networkmessage.h  networkmessage.hpp  participant.cpp  participant.h  participant.hpp  server.cpp  server.h  server.hpp  uncopyable.h
